# nerpda

./: bert_scores.csv  calculate_mean_f1_with_errors.py  evaluate_anonymization.py  main.py  natasha_ner_evaluation_results.json  ner.py  ner_anonymization_system.ipynb  ner_anonymizer.py  pda.py  pyproject.toml  test_natasha_ner.py
eval/: test_file_001.txt  test_file_002.txt  test_file_003.txt  test_file_004.txt  test_file_005.txt  test_file_006.txt  test_file_007.txt  test_file_008.txt  test_file_009.txt  test_file_010.txt  test_file_011.txt  test_file_012.txt  test_file_013.txt  test_file_014.txt  test_file_015.txt  test_file_016.txt  test_file_017.txt  test_file_018.txt  test_file_019.txt  test_file_020.txt  test_file_021.txt  test_file_022.txt  test_file_023.txt  test_file_024.txt  test_file_025.txt  test_file_026.txt  test_file_027.txt  test_file_028.txt  test_file_029.txt  test_file_030.txt  test_file_031.txt  test_file_032.txt  test_file_033.txt  test_file_034.txt  test_file_035.txt  test_file_036.txt  test_file_037.txt  test_file_038.txt  test_file_039.txt  test_file_040.txt  (+60 more)
